--- a/documentation/todo.txt
+++ b/documentation/todo.txt
@@ -2,15 +2,13 @@ TODO
 
 -- Spell check texts that are displayed, like error messages, http status text, etc.
 -- rename $controller to something else; im talking about the $controller variable name, the one that is returned by the router. rename it because it's name is confusing when used along with what is an actual controller.
-
--- Create the route parser in router->search
--- Allow the app routing config to be properly loaded
-
 -- Find out how 404 errors are handled. Apparently, errors are handled by the framework
 -- What about an error handler that handles errors like 404? I think I need an error handler to handle that sort of stuff. I also need an error controller than prepares a text and template and renders the error page.
 
 DONE
 
--- rename namespace for most components. let all components sit under the namespace "{FrameworkName}\Component", rather than "{FrameworkName}\Component\{ComponentName}"
-
+-- renamed namespace for most components. let all components sit under the namespace "{FrameworkName}\Component", rather than "{FrameworkName}\Component\{ComponentName}"
 -- I think the response and requests should be static as there can only be one request and response per script execution
+-- Designed and developed the views
+-- Created the route parser in router->search
+-- The app routing config now loads properly
