--- a/README
+++ b/README
@@ -5,12 +5,4 @@ frameworks operate. Underwear was designed to be experimental and
 not production-intended being that I know very little about actual 
 framework design. So, heed my warning if you plan otherwise.
 
-I made sure to document the framework as best as I could so that it 
-can later be improved. Learn more about Underwear in the Documentation 
-folder. Underwear was not meant to be distributed---but sharing 
-is caring---so I've shared the framework. But just in case you decide 
-to use it (for whatever devious scheme compelled you) ... be ware of 
-spelling errors, grammatical errors, typographical errors, ambiguity 
-in the documentation, and the boogie man.
-
-Enjoy!
+Underwear is under development
