--- a/README
+++ b/README
@@ -5,4 +5,4 @@ frameworks operate. Underwear was designed to be experimental and
 not production-intended being that I know very little about actual 
 framework design. So, heed my warning if you plan otherwise.
 
-Underwear is under development
+Underwear is under development.
